tests/ui/invalid_deref.stderr
error: invalid dereference
   ╭─[tests/ui/invalid_deref.ina:4:14]
   │
 4 │     let a = *20;
   │              ╶╮
   │               ╰── `integer` cannot be dereferenced
   ∙
───╯
